--- a/BiduaIndustries-1/package.json
+++ b/BiduaIndustries-1/package.json
@@ -74,6 +74,7 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.2",
     "rest-express": "file:",
+    "swiper": "^11.2.6",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.5",
